tests/ui/enum_overflows.stderr
error: discriminant overflow on value after 18446744073709551615
  --> tests/ui/enum_overflows.rs:13:9
   |
1  | #[cxx::bridge]
   | -------------- in this procedural macro expansion
...
13 |         F,
   |         ^
   |
   = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
